--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.wazzups</groupId>
-    <artifactId>itau-unibanco-transaction</artifactId>
+    <artifactId>transactions</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>itau-unibanco-transaction</name>
-    <description>itau-unibanco-transaction</description>
+    <name>transactions</name>
+    <description>Itau Unibanco - Transaction challenge</description>
     <url/>
     <licenses>
         <license/>
@@ -36,9 +36,12 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
